Another fixes